Refactor LessonService with tests